force-app/main/default/objects/Pricing_Request_Case_Details__c/Pricing_Request_Case_Details__c.object-meta.xml
<CustomObject>
    <label>Pricing Request Case Details</label>
    <nameField>
        <displayFormat>PR-{0000}</displayFormat>
        <label>PR ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pricing Request Case Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>