force-app/main/default/objects/Pricing_Request_Case_Details__c/fields/Annual_Volume__c.field-meta.xml
<CustomField>
    <fullName>Annual_Volume__c</fullName>
    <label>Annual Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>