force-app/main/default/objects/Pricing_Request_Case_Details__c/fields/Bulk_or_Additional_Drum_Minimums__c.field-meta.xml
<CustomField>
    <fullName>Bulk_or_Additional_Drum_Minimums__c</fullName>
    <label>Bulk or Additional Drum Minimums</label>
    <type>TextArea</type>
</CustomField>