force-app/main/default/objects/Pricing_Request_Case_Details__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Pricing Request Case Details</relationshipLabel>
    <relationshipName>Pricing_Request_Case_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>