force-app/main/default/objects/Pricing_Request_Case_Details__c/fields/Container_Size__c.field-meta.xml
<CustomField>
    <fullName>Container_Size__c</fullName>
    <label>Container Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>05DM</fullName>
            </value>
            <value>
                <fullName>100L</fullName>
            </value>
            <value>
                <fullName>10DM</fullName>
            </value>
            <value>
                <fullName>120L</fullName>
            </value>
            <value>
                <fullName>15DM</fullName>
            </value>
            <value>
                <fullName>205L</fullName>
            </value>
            <value>
                <fullName>20DM</fullName>
            </value>
            <value>
                <fullName>20L</fullName>
            </value>
            <value>
                <fullName>30DM</fullName>
            </value>
            <value>
                <fullName>320L</fullName>
            </value>
            <value>
                <fullName>40L</fullName>
            </value>
            <value>
                <fullName>55DM</fullName>
            </value>
            <value>
                <fullName>60L</fullName>
            </value>
            <value>
                <fullName>85DM</fullName>
            </value>
            <value>
                <fullName>CBIN</fullName>
            </value>
            <value>
                <fullName>FBIN</fullName>
            </value>
            <value>
                <fullName>PAL</fullName>
            </value>
            <value>
                <fullName>Tot2</fullName>
            </value>
            <value>
                <fullName>Tote</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>