force-app/main/default/objects/Pricing_Request_Case_Details__c/fields/Minimum_Drum_Rate__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Drum_Rate__c</fullName>
    <label>Minimum Drum Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>