force-app/main/default/objects/Pricing_Request_Case_Details__c/fields/Pricing_Type_of_Request__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Type_of_Request__c</fullName>
    <formula>text(Case__r.Pricing_Type_of_Request__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pricing Type of Request</label>
    <type>Text</type>
</CustomField>