force-app/main/default/objects/Pricing_Request_Case_Details__c/fields/Requested_rate__c.field-meta.xml
<CustomField>
    <fullName>Requested_rate__c</fullName>
    <label>Requested rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>