force-app/main/default/objects/Pricing_Request_Case_Details__c/fields/Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Unit_of_Measure__c</fullName>
    <label>Unit of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>05DM</fullName>
            </value>
            <value>
                <fullName>20L</fullName>
            </value>
            <value>
                <fullName>10DM</fullName>
            </value>
            <value>
                <fullName>40L</fullName>
            </value>
            <value>
                <fullName>15DM</fullName>
            </value>
            <value>
                <fullName>60L</fullName>
            </value>
            <value>
                <fullName>20DM</fullName>
            </value>
            <value>
                <fullName>100L</fullName>
            </value>
            <value>
                <fullName>30DM</fullName>
            </value>
            <value>
                <fullName>120L</fullName>
            </value>
            <value>
                <fullName>55DM</fullName>
            </value>
            <value>
                <fullName>205L</fullName>
            </value>
            <value>
                <fullName>85DM</fullName>
            </value>
            <value>
                <fullName>320L</fullName>
            </value>
            <value>
                <fullName>FBIN</fullName>
            </value>
            <value>
                <fullName>CBIN</fullName>
            </value>
            <value>
                <fullName>Tote</fullName>
            </value>
            <value>
                <fullName>Tot2</fullName>
            </value>
            <value>
                <fullName>LBS</fullName>
            </value>
            <value>
                <fullName>GAL</fullName>
            </value>
            <value>
                <fullName>L</fullName>
            </value>
            <value>
                <fullName>KG</fullName>
            </value>
            <value>
                <fullName>CYLE</fullName>
            </value>
            <value>
                <fullName>CYSM</fullName>
            </value>
            <value>
                <fullName>CYME</fullName>
            </value>
            <value>
                <fullName>CYLG</fullName>
            </value>
            <value>
                <fullName>CYXL</fullName>
            </value>
            <value>
                <fullName>PAL</fullName>
            </value>
            <value>
                <fullName>PBIF</fullName>
            </value>
            <value>
                <fullName>TON</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>