force-app/main/default/objects/Pricing_Request_Case_Details__c/fields/Waste_Class_Code__c.field-meta.xml
<CustomField>
    <fullName>Waste_Class_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Waste Class Code</label>
    <referenceTo>Waste_Class_Code__c</referenceTo>
    <relationshipLabel>Pricing Request Case Details</relationshipLabel>
    <relationshipName>Pricing_Request_Case_Details</relationshipName>
    <type>Lookup</type>
</CustomField>