force-app/main/default/objects/Pricing_Request_Case_Details__c/validationRules/Require_Minimum_Rate.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Minimum_Rate</fullName>
    <active>true</active>
    <errorConditionFormula>And(
Pricing_Type_of_Request__c = &apos;Drum Rates&apos;,
OR(
Text( Unit_of_Measure__c ) = &apos;GAL&apos;,
Text( Unit_of_Measure__c ) = &apos;LBS&apos;,
Text( Unit_of_Measure__c ) = &apos;Ton&apos;,
Text( Unit_of_Measure__c ) = &apos;LG&apos;,
Text( Unit_of_Measure__c ) = &apos;L&apos;,
Text( Unit_of_Measure__c ) = &apos;CY&apos;),
ISBLANK( Minimum_Drum_Rate__c ))</errorConditionFormula>
    <errorDisplayField>Minimum_Drum_Rate__c</errorDisplayField>
    <errorMessage>Please enter the Minimum Rate</errorMessage>
</ValidationRule>