force-app/main/default/objects/Pricing_Request_Case_Details__c/validationRules/Require_Minimum_Rate_and_ContainerSize.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Minimum_Rate_and_ContainerSize</fullName>
    <active>true</active>
    <errorConditionFormula>And(
Pricing_Type_of_Request__c = &apos;Drum Rates&apos;,
OR(
Text( Unit_of_Measure__c ) = &apos;GAL&apos;,
Text( Unit_of_Measure__c ) = &apos;LBS&apos;,
Text( Unit_of_Measure__c ) = &apos;Ton&apos;,
Text( Unit_of_Measure__c ) = &apos;LG&apos;,
Text( Unit_of_Measure__c ) = &apos;L&apos;,
Text( Unit_of_Measure__c ) = &apos;CY&apos;),
or( ISBLANK(  Minimum_Drum_Rate__c ),
ISBLANK(Text( Container_Size__c ))))</errorConditionFormula>
    <errorDisplayField>Container_Size__c</errorDisplayField>
    <errorMessage>Please select a container size</errorMessage>
</ValidationRule>