force-app/main/default/objects/Pricing_Request_Case_Details__c/validationRules/WCC_or_Profile_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>WCC_or_Profile_Check</fullName>
    <active>true</active>
    <errorConditionFormula>or(
and(
isblank( Profile__c)
,isblank (Waste_Class_Code__c )
)
,and(
not(isblank( Profile__c))
,not(isblank (Waste_Class_Code__c ))
)
)</errorConditionFormula>
    <errorMessage>Must enter either WCC or Profile, not both.</errorMessage>
</ValidationRule>